<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="ca.ulaval.ima.mp.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_restaurants"
        android:name="ca.ulaval.ima.mp.ui.restaurants.RestaurantsFragment"
        android:label="@string/title_restaurants"
        tools:layout="@layout/fragment_restaurants" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="ca.ulaval.ima.mp.ui.profile.ContainerFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_container" />
</navigation>