<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="602dp"
        android:background="@mipmap/ic_bg_kungry_foreground"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            app:srcCompat="@drawable/ic_australian_kangaroo_logo"
            tools:ignore="VectorDrawableCompat" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:tint="@color/colorWhite"
            app:srcCompat="@drawable/ic_logo_kungry"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/connexionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="64dp"
            android:text="@string/connexion"
            android:textColor="@color/colorWhite"
            android:textSize="16dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="335dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/colorWhite"
            android:drawableStart="@drawable/ic_np_email_1569995_000000"
            android:drawableLeft="@drawable/ic_np_email_1569995_000000"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingLeft="10dp" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="335dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/colorWhite"
            android:drawableStart="@drawable/ic_np_password"
            android:drawableLeft="@drawable/ic_np_password"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingLeft="10dp" />

        <Button
            android:id="@+id/connectButton"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/colorButton"
            android:text="@string/connect"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signupText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:gravity="center"
            android:text="@string/signup_if_new"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>